# itch-rpg-jams

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  itch_jam.py  itch_jam.sql  itch_jam_lib.py  keywords.toml  migrate_to_normalized_schema.py  pyproject.toml  setup.py
migrations/: 001_create_normalized_schema.sql  002_swap_tables.sql
templates/: base.html.jinja  index-finished.html.jinja  index.html.jinja
